agregando h1 contacto y producto con css

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto fw-bold contentNavbar">
                 <li class="nav-item">
-                  <a class="nav-link" href="./index.html">Productos</a>
+                  <a class="nav-link" href="./index.html">PRODUCTOS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                  <a class="nav-link" href="./contacto.html">CONTACTO</a>
                 </li>
                 </li>
               </ul>
@@ -39,6 +39,10 @@
           </div>
         </nav>
       </header>
+
+      <main>
+        <h1 class="text-center m-5 contactoTitulo">PRODUCTOS</h1>
+      </main>
 
 
     <script src="js/main.js"></script>
