--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto fw-bold contentNavbar">
                 <li class="nav-item">
-                  <a class="nav-link" href="./index.html">PRODUCTOS</a>
+                  <a class="nav-link" href="./index.html">INICIO</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contacto.html">CONTACTO</a>
@@ -35,16 +35,52 @@
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-danger buscador" type="submit">Buscar</button>
               </form>
+              <div class="carrito-c animated">
+                <span style="font-size:30px;cursor:pointer" id="openCar">
+                  <h1 class="verCarrito" id="verCarrito">🛒</h1>
+                </span>
+            </div>
             </div>
           </div>
         </nav>
       </header>
 
       <main>
+        <div id="carouselExampleFade" class="carousel slide carousel-fade container" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./img/carousel/rutinaGrasa.png" class="d-block" height="700px" width="1100px" alt="RutinaGrasa">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carousel/rutinaMixta.png" class="d-block" height="700px" width="1100px" alt="rutinaMixta">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/carousel/rutinaSeca.png" class="d-block" height="700px" width="1100px" alt="rutinaSeca">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+
         <h1 class="text-center m-5 contactoTitulo">PRODUCTOS</h1>
+        <!-- contenido tienda -->
+        <div id="tienda" class="tienda"></div>
+
+        
+
+        <!-- Ver carrito modal -->
+        <div id="planillaContenido" class="planillaContenido"></div>
+
       </main>
 
-
+    <script src="js/productos.js"></script>
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
