--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto fw-bold contentNavbar">
                 <li class="nav-item">
-                  <a class="nav-link" href="./index.html">PRODUCTOS</a>
+                  <a class="nav-link" href="./index.html">INICIO</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="./contacto.html">CONTACTO</a>
