--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </li>
               </ul>
               <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
                 <button class="btn btn-danger buscador" type="submit">Buscar</button>
               </form>
               <div class="carrito-c animated">
@@ -49,13 +49,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade container" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./img/carousel/rutinaGrasa.png" class="d-block" height="700px" width="1100px" alt="RutinaGrasa">
+              <img src="./img/carousel/rutinaGrasa.png" class="d-block" height="700px" width="1200px" alt="RutinaGrasa">
             </div>
             <div class="carousel-item">
-              <img src="./img/carousel/rutinaMixta.png" class="d-block" height="700px" width="1100px" alt="rutinaMixta">
+              <img src="./img/carousel/rutinaMixta.png" class="d-block" height="700px" width="1200px" alt="rutinaMixta">
             </div>
             <div class="carousel-item">
-              <img src="./img/carousel/rutinaSeca.png" class="d-block" height="700px" width="1100px" alt="rutinaSeca">
+              <img src="./img/carousel/rutinaSeca.png" class="d-block" height="700px" width="1200px" alt="rutinaSeca">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
