--- a/contacto.html
+++ b/contacto.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/logo-Lidherma.png" />
+    <link rel="shortcut icon" href="./public/img/logo-Lidherma.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./public/style.css" />
     <title>Lidherma - Contacto</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-md bgWhite container tipografiaNav">
           <div class="container">
             <a class="navbar-brand" href="./index.html">
-              <img src="img/logo-Lidherma.png" alt="logo" width="120" height="120">
+              <img src="/public/img/logo-Lidherma.png" alt="logo" width="120" height="120">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,6 @@
         </form>
       </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="js/productos.js"></script>r
-    <script src="js/contacto.js"></script> 
+    <script src="src/contacto.js"></script> 
 </body>
 </html>
