--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/logo-Lidherma.png" />
+    <link rel="shortcut icon" href="./public/img/logo-Lidherma.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./public/style.css" />
     <title>Lidherma</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-md bgWhite container tipografiaNav">
           <div class="container">
             <a class="navbar-brand" href="./index.html">
-              <img src="img/logo-Lidherma.png" alt="logo" width="120" height="120">
+              <img src="/public/img/logo-Lidherma.png" alt="logo" width="120" height="120">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,13 +56,13 @@
         <div id="carouselExampleFade" class="carousel slide carousel-fade container" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./img/carousel/rutinaGrasa.png" class="d-block" height="700px" width="1200px" alt="RutinaGrasa">
+              <img src="./public/img/carousel/rutinaGrasa.png" class="d-block" height="700px" width="1200px" alt="RutinaGrasa">
             </div>
             <div class="carousel-item">
-              <img src="./img/carousel/rutinaMixta.png" class="d-block" height="700px" width="1200px" alt="rutinaMixta">
+              <img src="./public/img/carousel/rutinaMixta.png" class="d-block" height="700px" width="1200px" alt="rutinaMixta">
             </div>
             <div class="carousel-item">
-              <img src="./img/carousel/rutinaSeca.png" class="d-block" height="700px" width="1200px" alt="rutinaSeca">
+              <img src="./public/img/carousel/rutinaSeca.png" class="d-block" height="700px" width="1200px" alt="rutinaSeca">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -87,8 +87,8 @@
 
       </main>
 
-    <script src="js/productos.js"></script>
-    <script src="js/main.js"></script>
+    <script src="src/stock.js"></script>
+    <script src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
