centrando el buscador

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </header>
         
         <main>
-        <ul id="resultado">
+        <ul id="resultado" class="container">
           <li></li>
         </ul>
 
