--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 
                 <div class="carrito-c animated">
                   <span style="font-size:30px;cursor:pointer" id="openCar">
-                    <h1 class="verCarrito m-2" id="verCarrito">🛒</h1>
+                    <h1 class="verCarrito m-2" id="verCarrito">🛒<span id="cantidadCarrito" class="cantidadCarrito"></span></h1>
                   </span>
                 </div>
               </div>
@@ -46,6 +46,7 @@
           </nav>
         </header>
         
+        <!-- buscador -->
         <main>
         <ul id="resultado" class="container">
           <li></li>
@@ -86,8 +87,9 @@
         <div id="planillaContenido" class="planillaContenido"></div>
 
       </main>
-    <script src="src/stock.js"></script>
-    <script src="app.js"></script>
+      <script src="./src/stock.js"></script>
+      <script src="./src/carrito.js"></script>
+      <script src="./app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
