--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
 
       </main>
       <script src="./src/stock.js"></script>
+      <script src="./src/storage.js"></script>
       <script src="./src/buscador.js"></script>
       <script src="./src/carrito.js"></script>
       <script src="./app.js"></script>
