--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
         <form class="container" style="width: 50%" id="formulario">
             <div class="mb-3">
                 <label for="exampleInputNombre1" class="form-label">NOMBRE</label>
-                <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp">
+                <input type="text" class="form-control" id="nombre" aria-describedby="emailHelp" required>
                 
             </div>
             <div class="mb-3">
