--- a/index.html
+++ b/index.html
@@ -90,11 +90,12 @@
         <div id="planillaContenido" class="planillaContenido"></div>
 
       </main>
-      <script src="./src/stock.js"></script>
+      <script src="./src/data/stock.js"></script>
+      <script src="./src/data/stock.json"></script>
       <script src="./src/storage.js"></script>
       <script src="./src/buscador.js"></script>
       <script src="./src/carrito.js"></script>
-      <script src="./app.js"></script>
+      <script src="app.js"></script>
       <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
