--- a/contacto.html
+++ b/contacto.html
@@ -71,6 +71,12 @@
             <button type="submit" class="btn btn-danger buscador">ENVIAR</button>
         </form>
       </main>
+
+      <footer>
+        <p> Proyecto final JavaScript - Leslie Iorcansky </p>
+      </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./src/contacto.js"></script> 
 </body>
