--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         <div id="planillaContenido" class="planillaContenido"></div>
 
       </main>
+
+      <footer>
+        <p> Proyecto final JavaScript - Leslie Iorcansky </p>
+      </footer>
+
       <script src="./src/data/stock.js"></script>
       <script src="./src/data/stock.json"></script>
       <script src="./src/storage.js"></script>
