modificando logo del header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-md bgWhite container tipografiaNav">
           <div class="container">
             <a class="navbar-brand" href="./index.html">
-              <img src="/public/img/logo-Lidherma.png" alt="logo" width="120" height="120">
+              <img src="/public/img/logo-Lidherma.jpg" alt="logo" width="250" height="250">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
