--- a/contacto.html
+++ b/contacto.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./public/img/logo-Lidherma.png" />
+    <link rel="shortcut icon" href="public/img/logo-Lidherma.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
     <link href="//cdn.jsdelivr.net/npm/@sweetalert2/theme-minimal@4/minimal.css" rel="stylesheet">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="./public/style.css" />
+    <link rel="stylesheet" href="public/style.css" />
     <title>Lidherma - Contacto</title>
 </head>
 <body>
     <header class="container-fluid">
         <nav class="navbar navbar-expand-md bgWhite container tipografiaNav">
           <div class="container">
-            <a class="navbar-brand" href="./index.html">
-              <img src="/public/img/logo-Lidherma.jpg" alt="logo" width="250" height="250">
+            <a class="navbar-brand" href="index.html">
+              <img src="public/img/logo-Lidherma.jpg" alt="logo" width="250" height="250">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,10 +26,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav ms-auto fw-bold contentNavbar">
                 <li class="nav-item">
-                  <a class="nav-link" href="./index.html">INICIO</a>
+                  <a class="nav-link" href="index.html">INICIO</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                  <a class="nav-link" href="contacto.html">CONTACTO</a>
                 </li>
                 </li>
               </ul>
